Fix margin collapse issue

--- a/www/css/web.css
+++ b/www/css/web.css
@@ -14,10 +14,13 @@ body{
 }
 
 main{
+	flex-grow: 1;
+}
+
+main > div{
 	margin: 8rem auto 3rem;
 	max-width: 55ch;
 	padding: 0 3rem;
-	flex-grow: 1;
 }
 
 body > header{
@@ -74,8 +77,8 @@ body > footer li{
 	max-width: 40%;
 }
 
-body > main > section[epub|type~="titlepage"],
-body > main > section[epub|type~="halftitlepage"]{
+body > main > div > section[epub|type~="titlepage"],
+body > main > div > section[epub|type~="halftitlepage"]{
 	min-height: auto;
 }
 
@@ -95,7 +98,7 @@ nav[epub|type~="toc"] ol{
 }
 
 @media(max-width: 65ch){
-	main{
+	main > div{
 		padding: 0 2rem;
 	}
 
